BASIC-53: aiops code agent
